Edits summary of new pages

--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -89,7 +89,7 @@ entries:
       output: web
 
     - title: Predicates
-      url: /api_ref.html
+      url: /api_ref_predicates.html
       output: web
 
   - title: Bebop fundamentals
