--- a/kaalam/_config.yml
+++ b/kaalam/_config.yml
@@ -15,7 +15,7 @@ tiles-count: 4
 # social settings
 github_url: https://github.com/kaalam
 linkedin_url:
-slack_url: https://kaalam-ai.slack.com
+slack_url:
 twitter_url: https://twitter.com/kaalam_ai
 
 # build settings
