--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -88,6 +88,10 @@ entries:
       url: /api_ref_attributes.html
       output: web
 
+    - title: API reference - Using Jazz to serve applications
+      url: /api_ref_serving_frontend.html
+      output: web
+
     - title: API reference - Agency bases (Work in Progress)
       url: /api_ref_agency_wip.html
       output: web
